# hvh-backend

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  alembic.ini  docker-compose.local.yaml  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml  main.yml  on-release-main.yml
docker/backend/: Dockerfile  start.sh
docker/db/: Dockerfile
docker/db/entrypoints/: 12_blank.sh
docker/db/maintenance/: backup  migrate
docker/traefik/: dev.toml
docs/: index.md  modules.md
migrations/: env.py
migrations/models/: 0_20241205121449_init.py
migrations/versions/: 91e28d45301a_auto_create_migration.py  c307aa2ece6d_auto_create_migration.py  e0a3ca04a2cf_.py  e77e2a413a84_add_metadata.py
src/: celery_tasks.py  contants.py  main.py  worker.py
src/api/: __init__.py
src/api/v1/: __init__.py  auth_views.py  login.py  password_views.py  sse_views.py  tasks.py  user_views.py  users.py
src/applications/tasks/: models.py  service.py  structs.py  tasks.py
src/applications/tg_web_app/: api.py  schemes.py
src/applications/tg_web_app/bot/: __init__.py  client.py  enums.py  exceptions.py  keyboard.py  message.py  schemes.py  urls.py
src/applications/tg_web_app/bot/schemes/: __init__.py  init_data.py  message.py
src/applications/users/: interactors.py  models.py  selectors.py
src/applications/users/auth/: dataclasses.py  depens.py  middlewares.py  schemas.py
src/applications/users/auth/utils/: _otp_codes.py  contrib.py  jwt.py  password.py
src/applications/users/schemas/: __init__.py  password_schemas.py  user_schemas.py
src/applications/youtube/: enums.py  models.py  service.py  structs.py
src/apps/tasks/: models.py  service.py  structs.py
src/apps/users/: api.py  dependens.py  depends.py  interactors.py  models.py  selectors.py  service.py
src/apps/users/auth/: dataclasses.py  depens.py  middlewares.py  schemas.py
src/apps/users/auth/utils/: contrib.py  jwt.py  password.py
src/apps/users/schemas/: __init__.py  user_schemas.py
src/apps/youtube/: models.py
src/config/: __init__.py  constants.py  db.py  settings.py
src/core/: exceptions.py  init_app.py  redis_utils.py
src/core/async_logger/: __init__.py  abstract.py  config.py  constants.py  dispatcher.py  formatter.py  tools.py
src/core/async_logger/handlers/: __init__.py  print_log_.py
src/core/async_logger/middlewares/: __init__.py  asgi_correlation_id.py  asgi_logger_middleware.py
src/core/async_logger/structures/: base.py  log_level_color.py  request.py
src/core/config/: __init__.py  db.py
src/models/: __init__.py  entity.py
src/static/vendors/themes/bs_darkly/: _bootswatch.scss  _variables.scss  bootstrap.css  bootstrap.min.css
src/templates/: _sse_dashboard.html  sse_dashboard.html
src/tools/: async_to_sync.py  base_db_model.py  db_tools.py
src/tools/class_finder/: __init__.py  finder.py
src/tools/email_inspectors/: constants.py  inspector.py  settings.py  structs.py
src/tools/media_downloader/: __init__.py  console_logger.py  downloader.py  exceptions.py  structs.py
src/tools/media_downloader/progress_hooks/: __init__.py  console.py
src/tools/pipeline/: __init__.py  custom_q.py  pipeline.py  worker.py
src/tools/sql_crud/: base.py
tests/: conftest.py  constants.py  settings.py  test_foo.py  test_inspector.py  test_main.py  test_migrations.py
tests/_inventory/: api_test_client.py  factories.py
tests/_setup/inventory/: api_test_client.py  factories.py
tests/api/v1/tasks/: conftest.py  test_tasks.py
tests/api/v1/users/: test_auth.py  test_auth_views.py  test_password_views.py  test_user_views.py  test_views.py
tests/apps/tasks/: test_celery_tasks.py  test_service.py
tests/apps/users/: test_interactor.py  test_selectors.py
tests/apps/users/auth/utils/: test_contrib.py  test_jwt.py  test_password.py
tests/apps/users/interactors/: test_user_interactor.py
tests/apps/youtube/: test_service.py
tests/config/: conftest.py  test_db.py
tests/inventory/: __init__.py  api_test_client.py  assert_tools.py  factories.py
tests/setup/: db_tools.py
tests/setup/inventory/: __init__.py  api_test_client.py  factories.py  logging.py  settings.py
